<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/mascot_happy"
        android:shortcutId="add_nag"
        android:shortcutLongLabel="@string/shortcut_add_long"
        android:shortcutShortLabel="@string/shortcut_add_short">
        <intent
            android:action="com.nagmo.app.action.ADD_NAG"
            android:targetClass="com.nagmo.app.ui.MainActivity"
            android:targetPackage="com.nagmo.app" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/mascot_nagging"
        android:shortcutId="today"
        android:shortcutLongLabel="@string/shortcut_today_long"
        android:shortcutShortLabel="@string/shortcut_today_short">
        <intent
            android:action="com.nagmo.app.action.SHOW_TODAY"
            android:targetClass="com.nagmo.app.ui.MainActivity"
            android:targetPackage="com.nagmo.app" />
    </shortcut>
</shortcuts>
